--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
     "resolve": "1.12.0",
