--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
